# netCDF

./: CONTENTS  INDEX  LICENSE  README  TITLE  cleanup  configure  configure.in
Examples/: panom.nc  test.nc
R/: load.R  load.R.in  readnetcdf.R
man/: open.netCDF.Rd  read.netCDF.Rd
src/: Makevars  Makevars.in  Rreadnetcdf.c  configure
tests/: README  foo.cdl  foo.nc  panom.R  panom.Rout.save  panom.cdl  panom.ps.save  test.cdl
